update avatar and rmd

--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ title: 'Marius Botos'
 description: 'PhD Student in Computational Biology.'
 
 # Images
-avatar: 'avatar.jpg'
-background: 'background2.jpg'
+avatar: 'mavatar.jpg'
+background: 'background.jpg'
 favicon: 'favicon.ico'
 
 # Online profiles
